# OmniLoader

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  codecov.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  release-please-config.json  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/omniloader/: index.doctree
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  docs.yml
_modules/: index.html
_modules/omniloader/: cli.html  collate.html  config.html  introspection.html  loader.html  templates.html  transforms.html
_modules/omniloader/data/: datasets.html  factory.html  npy.html  splits.html
_modules/omniloader/sampling/: bucketing.html  sampler.html  strategies.html  subsamplers.html  weights.html
_modules/omniloader/schema/: spec.html  unify.html
_modules/omniloader/transforms/: augment.html  base.html  crop.html  mix.html  normalize.html  stats.html
_modules/omniloader/utils/: padding.html  seeding.html
_sources/autoapi/: index.rst.txt
_sources/autoapi/omniloader/: index.rst.txt
autoapi/: index.html
autoapi/omniloader/: index.html
autoapi/omniloader/cli/: index.html
autoapi/omniloader/collate/: index.html
autoapi/omniloader/config/: index.html
autoapi/omniloader/data/: index.html
autoapi/omniloader/integrations/: index.html
autoapi/omniloader/introspection/: index.html
docs/: conf.py  index.rst
omniloader/: __init__.py  cli.py  collate.py  config.py  introspection.py  loader.py
omniloader/data/: datasets.py  factory.py  npy.py  splits.py
omniloader/integrations/: lightning.py
omniloader/sampling/: bucketing.py  sampler.py  strategies.py  subsamplers.py  weights.py
omniloader/schema/: spec.py  unify.py
omniloader/templates/: __init__.py  config_template.yaml
omniloader/transforms/: __init__.py  augment.py  base.py  crop.py  mix.py  normalize.py  stats.py
omniloader/utils/: padding.py  seeding.py
tests/: fixtures.py  test_cli.py  test_collate.py  test_config.py  test_introspection.py  test_loader.py  test_templates.py
tests/configs/: augmentation.json  temperature.json
tests/data/: test_datasets.py  test_factory.py  test_npy.py  test_splits.py
tests/integrations/: test_lightning.py
tests/sampling/: test_bucketing.py  test_sampler.py  test_strategies.py  test_subsamplers.py  test_weights.py
tests/schema/: test_spec.py  test_unify.py
tests/transforms/: test_crop.py  test_mix.py  test_normalize.py  test_stats.py  test_transforms.py
tests/utils/: test_padding.py  test_seeding.py
(+90 files in other folders)
